--- a/survey.html
+++ b/survey.html
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background: linear-gradient(110deg, #006633  50%, #FFCC33 50%);" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="#page-top" style="font-size: 25px;">
-                <img src="./logo.png" width="100"> <h3  style="display: inline;">Department of of<em>Computer Science </em></h3>
+                <img src="./logo.png" width="100"> <h3  style="display: inline;">Department of <em>Computer Science </em></h3>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
